Added tests for AcademyMembers and BoardMembers